--- a/guide.html
+++ b/guide.html
@@ -17,22 +17,54 @@ font-size: 87.5%;
 <pre style="font-family: inherit">
 Key
 
+All letters except the last (normally)
 D: Defective
 E: Extremely
 V: Very
 U: Uncomfortable
 S: Stone
+A: Aluminium
+Br: Brass
 Q: Quite
+St: Steel
+Brz: Bronze
+C: Comfortable
+Cp: Copper
+Sl: Silver
+Pt: Platinum
+G: Gold
+M: Magic
 
+Last letter (normally)
 C: Chair
 B: Bench
+S: Shed
+F: Factory
+T: Throne
+Tb: Thrench
 
 3 Euc –> 1 Vuc
 500 Euc –> 1 Aeuc
 5 Vuc –> 1 Uc
 3 Uc –> 1 Sc
 5 Uc –> 1 Spuc
+3 Sc –> 1 Ac
+4 Sc –> 1 Brc
 3 Spuc –> 1 Quc
+2 Brc –> 1 Stc
+5 Spuc –> 1 C
+3 Stc –> 1 Brzc
+3 C –> 1 B
+2 C & 3 Quc –> 1 Cc
+5 Stc -> 1 Cpc
+3 B -> 1 S
+3 S -> 1 F
+75 Cpc -> 1 Slc
+40 Slc -> 1 Ptc
+2 Ptc -> 1 Gc
+5 Gc -> 1 T
+3 T -> 1 Tb
+Mc unlocked from completing
 
 May be added:
 P: Painful
