--- a/guide.html
+++ b/guide.html
@@ -64,7 +64,7 @@ Tb: Thrench
 2 Ptc -> 1 Gc
 5 Gc -> 1 T
 3 T -> 1 Tb
-Mc unlocked from completing
+Mc unlocked from completing the trials
 
 May be added:
 P: Painful
