--- a/tradeachair.html
+++ b/tradeachair.html
@@ -43,10 +43,12 @@ var tn = 1;
 var t = 1;
 var d = 0;
 
-/*document.addEventListener("click", function(){
+document.addEventListener("click", function(){
+for (let i = 0; i < 1; i++) {
 clicks += 1;
-preprestige += 0.2 / clicks ** 1.25;
-});*/
+preprestige += 0.25 / clicks ** 1.25;
+}
+});
 </script>
 
 <button onclick="
