--- a/tradeachair.html
+++ b/tradeachair.html
@@ -44,10 +44,8 @@ var t = 1;
 var d = 0;
 
 document.addEventListener("click", function(){
-for (let i = 0; i < 1; i++) {
 clicks += 1;
 preprestige += 0.25 / clicks ** 1.25;
-}
 });
 </script>
 
@@ -220,9 +218,7 @@ document.getElementById('dc').innerText = Math.floor(d / 100);">Buy</button>
 
 <script>
 function automate(a, b) {
-for(let i = 0; i < parseInt(b); i++) {
-document.getElementById(a).innerText = parseInt(document.getElementById(a).innerText) + 1;
-}
+document.getElementById(a).innerText = parseInt(document.getElementById(a).innerText) + parseInt(b);
 }
 
 setInterval(function(){automate('euc', document.getElementById('aeuc').innerText)}, 250);
