--- a/guide.html
+++ b/guide.html
@@ -35,16 +35,23 @@ Pt: Platinum
 G: Gold
 M: Magic
 
-Last letter (normally)
+Last letter/group of letters (normally)
 C: Chair
+Tl: Table
 B: Bench
 S: Shed
 F: Factory
 T: Throne
 Tb: Thrench
 
+Obtaining Info
+->: Trade
+-: Obtain Without Trade
+
 3 Euc –> 1 Vuc
 500 Euc –> 1 Aeuc
+100 Euc - 1 Dc
+25 Dc -> 1 Tl
 5 Vuc –> 1 Uc
 3 Uc –> 1 Sc
 5 Uc –> 1 Spuc
